--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -1,14 +1,19 @@
 {
   "compilerOptions": {
     "target": "ES2020",
+    "useDefineForClassFields": true,
+    "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
-    "outDir": "dist",
-    "declaration": true,
-    "strict": true,
+    "skipLibCheck": true,
     "moduleResolution": "node",
-    "esModuleInterop": true,
-    "composite": true,
+    "allowImportingTsExtensions": true,
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "noEmit": true,
     "jsx": "react-jsx",
+    "strict": true,
+    "esModuleInterop": true
   },
-  "include": ["src/**/*"]
+  "include": ["src"],
+  "references": [{ "path": "../server" }]
 }
