--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "1.0.0",
   "private": true,
   "devDependencies": {
-    "typescript": "^5.5.4"
+    "typescript": "^5.5.4",
+    "concurrently": "^8.2.2"
   },
   "scripts": {
     "build": "pnpm --filter @my-workspace/server run build && pnpm --filter @my-workspace/client run build",
-    "dev": "pnpm --filter @my-workspace/server run dev & pnpm --filter @my-workspace/client run dev",
+    "dev": "concurrently \"pnpm --filter @my-workspace/server run dev\" \"pnpm --filter @my-workspace/client run dev\"",
     "preview": "pnpm --filter @my-workspace/client run preview"
   }
 }
