--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -10,11 +10,12 @@
   },
   "dependencies": {
     "@my-workspace/server": "workspace:*",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "@tanstack/react-query": "^5.0.0",
+    "@tanstack/react-router": "^1.131.7",
     "@trpc/client": "^11.0.0",
     "@trpc/react-query": "^11.0.0",
-    "@tanstack/react-query": "^5.0.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
