--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -14,10 +14,13 @@
     "@tanstack/react-router": "^1.131.7",
     "@trpc/client": "^11.0.0",
     "@trpc/react-query": "^11.0.0",
+    "chart.js": "^4.5.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@types/chart.js": "^4.0.1",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
