--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "build": "tsc",
-    "dev": "nodemon --watch src --ext ts,tsx --exec 'tsx src/index.ts' --signal SIGTERM"
+    "dev": "nodemon --watch src --ext ts,tsx --exec 'tsx src/index.ts'",
+    "migrate": "prisma migrate dev"
   },
   "devDependencies": {
     "typescript": "^5.5.4",
@@ -16,6 +17,9 @@
   },
   "dependencies": {
     "@trpc/server": "^11.0.0",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "prisma": "^5.17.0",
+    "@prisma/client": "^5.17.0",
+    "zod": "^3.22.4"
   }
 }
