chore: changed repo name

--- a/package.json
+++ b/package.json
@@ -1,14 +1,12 @@
 {
-  "name": "simple-pnpm-workspace",
-  "version": "1.0.0",
-  "private": true,
-  "devDependencies": {
-    "typescript": "^5.5.4",
-    "concurrently": "^8.2.2"
-  },
+  "name": "trpc-monorepo",
   "scripts": {
-    "build": "pnpm --filter @my-workspace/server run build && pnpm --filter @my-workspace/client run build",
-    "dev": "concurrently \"pnpm --filter @my-workspace/server run dev\" \"pnpm --filter @my-workspace/client run dev\"",
-    "preview": "pnpm --filter @my-workspace/client run preview"
-  }
+    "build:client": "pnpm --filter client build",
+    "build:server": "pnpm --filter server build",
+    "start:client": "pnpm --filter client start",
+    "start:server": "pnpm --filter server start"
+  },
+  "workspaces": [
+    "packages/*"
+  ]
 }
