--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -4,9 +4,8 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite",
     "build": "tsc -b && vite build",
-    "preview": "vite preview"
+    "dev": "vite"
   },
   "dependencies": {
     "@my-workspace/server": "workspace:*",
