--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -6,20 +6,23 @@
   "type": "module",
   "scripts": {
     "build": "tsc",
-    "dev": "nodemon --watch src --ext ts,tsx --exec 'tsx src/index.ts'",
-    "migrate": "prisma migrate dev"
+    "start": "node dist/index.js",
+    "generate": "prisma generate",
+    "dev": "nodemon src/index.ts"
   },
   "devDependencies": {
-    "typescript": "^5.5.4",
+    "@types/aws-lambda": "^8.10.152",
+    "@types/cors": "^2.8.12",
+    "aws-lambda#": "link:@types/aws-lambda#",
     "nodemon": "^3.0.1",
     "tsx": "^4.7.0",
-    "@types/cors": "^2.8.12"
+    "typescript": "^5.5.4"
   },
   "dependencies": {
-    "@trpc/server": "^11.0.0",
+    "@prisma/client": "^5.17.0",
+    "@trpc/server": "^11.4.4",
     "cors": "^2.8.5",
     "prisma": "^5.17.0",
-    "@prisma/client": "^5.17.0",
     "zod": "^3.22.4"
   }
 }
