--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -2,12 +2,14 @@
   "compilerOptions": {
     "target": "ES2020",
     "module": "ESNext",
-    "outDir": "dist",
-    "declaration": true,
-    "strict": true,
     "moduleResolution": "node",
+    "outDir": "./dist",
+    "strict": true,
     "esModuleInterop": true,
-    "composite": true
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "composite": true // Enable composite for project references
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*", "functions/**/*"],
+  "exclude": ["node_modules"]
 }
