--- a/netlify.toml
+++ b/netlify.toml
@@ -6,6 +6,6 @@
 [build.environment]
   NODE_VERSION = "18"
 
-[[functions]]
+[functions]
   directory = "packages/server/netlify/functions"
   node_bundler = "esbuild"
