--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,28 +1,22 @@
 {
   "name": "@my-workspace/server",
-  "version": "1.0.0",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
-  "type": "module",
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
     "generate": "prisma generate",
     "dev": "nodemon src/index.ts"
   },
-  "devDependencies": {
-    "@types/aws-lambda": "^8.10.152",
-    "@types/cors": "^2.8.12",
-    "aws-lambda#": "link:@types/aws-lambda#",
-    "nodemon": "^3.0.1",
-    "tsx": "^4.7.0",
-    "typescript": "^5.5.4"
-  },
   "dependencies": {
-    "@prisma/client": "^5.17.0",
+    "@prisma/client": "^5.0.0",
     "@trpc/server": "^11.4.4",
-    "cors": "^2.8.5",
-    "prisma": "^5.17.0",
-    "zod": "^3.22.4"
+    "zod": "^3.0.0"
+  },
+  "devDependencies": {
+    "@types/aws-lambda": "^8.10.0",
+    "@types/node": "^24.2.1",
+    "nodemon": "^3.0.0",
+    "prisma": "^5.0.0",
+    "tsx": "^4.0.0",
+    "typescript": "^5.0.0"
   }
 }
