--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,10 +1,12 @@
 {
   "name": "@my-workspace/server",
+  "type": "module",
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
     "generate": "prisma generate",
-    "dev": "nodemon src/index.ts"
+    "dev": "nodemon src/index.ts",
+    "build:functions": "ts-node netlify/build-functions.ts"
   },
   "dependencies": {
     "@prisma/client": "^5.0.0",
@@ -14,8 +16,11 @@
   "devDependencies": {
     "@types/aws-lambda": "^8.10.0",
     "@types/node": "^24.2.1",
+    "esbuild": "^0.25.8",
+    "glob": "^11.0.3",
     "nodemon": "^3.0.0",
     "prisma": "^5.0.0",
+    "ts-node": "^10.9.2",
     "tsx": "^4.0.0",
     "typescript": "^5.0.0"
   }
